services/cloudtty/0.8.7/traefik.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-sslip
  namespace: ${releaseNamespace}
spec:
  redirectRegex:
    regex: ^https:\/\/([^\/]+)\/cloudtty\/?(.*)
    replacement: "https://cloudtty.$1.sslip.io/"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cloudtty-fqdn-route
  namespace: ${releaseNamespace}
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - match: HostRegexp(`cloudtty.{subdomain:[0-9.]+}.sslip.io`)
    # syntax: v2
    kind: Rule
    services:
    - name: cloudtty-cloudtty
      port: 9001
